--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Categories/Delete.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Categories/Delete.cshtml
@@ -19,6 +19,14 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Active)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Active)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
