--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Brands/Delete.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Brands/Delete.cshtml
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.Active)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Address)
+            @Html.DisplayFor(model => model.Active)
         </dd>
 
     </dl>
