--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Categories/Create.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Categories/Create.cshtml
@@ -24,6 +24,16 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Active)
+                    @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
