--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Index.cshtml
@@ -1,31 +1,43 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@Styles.Render("~/Content/css/index.css")
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+<h1 class="text-center btn-block btn-pink rounded-pill">Giá sốc cuối tuần</h1>
+<div class="row row-cols-1 row-cols-md-3">
+    <div class="col mb-4">
+        <!-- Card -->
+        <div class="card card-product">
+            <!--Card image-->
+            <div class="view overlay">
+                <img class="card-img-top"
+                     src="https://cdn.tgdd.vn/Products/Images/44/215941/macbook-pro-16-201926-macbookprotouch16inch-1-600x600.jpg"
+                     alt="Card image cap">
+                <a href="#!">
+                    <div class="mask rgba-white-slight"></div>
+                </a>
+            </div>
+            <!--Card content-->
+            <div class="card-body">
+                <h4 class="card-title">MacBook Pro Touch 16 inch 2019 i7</h4>
+                <h5>
+                    <span class="red-text">$58.990.000đ</span> <span class="discount">$59.990.000đ</span>
+                </h5>
+                <hr>
+                <p class="card-text purple-text">
+                    Màn hình: 16 inch, Retina (3072 x 1920) <br>
+                    CPU: Intel Core i7 Coffee Lake, 2.60 GHz <br>
+                    Đồ họa: Radeon Pro 5300M, 4GB <br>
+                    Mac OS <br>
+                    2.0 kg, Pin: Khoảng 10 giờ
+                </p>
+            </div>
+            <div class="text-center">
+                <button type="button" class="btn btn-pink btn-md rounded-pill">Read more</button>
+                <button type="button" class="btn btn-pink btn-md rounded-pill">Add Cart</button>
+            </div>
+        </div>
+        <!-- Card -->
     </div>
 </div>
