Show Login, Sign Up

--- a/SaleLaptopSystem/SaleLaptopSystem/Content/css/shared.css
+++ b/SaleLaptopSystem/SaleLaptopSystem/Content/css/shared.css
@@ -123,7 +123,7 @@
 
 .main-body:after {
     content: "";
-    background: url('../img/background.jpg') no-repeat fixed center;;
+    background: url('../../img/background.jpg') no-repeat fixed center;
     opacity: 0.6;
     top: 0;
     left: 0;
