--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
@@ -25,13 +25,15 @@
         <div class="container-lg">
             <div class="collapse navbar-collapse text-center" id="menu">
                 <ul class="navbar-nav">
-                    <li class="nav-item">@Html.ActionLink("Apple", "Index", "Products", new { brand = 1}, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Apple", "Index", "Products", new { brand = 1 }, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Asus", "Index", "Products", new { brand = 2 }, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Dell", "Index", "Products", new { brand = 3 }, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("HP", "Index", "Products", new { brand = 4 }, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Sign Up", "Sign Up", "Home", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Login", "Login", "Users", null, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Sign Up", "SignUp", "Users", null, new { @class = "nav-link" })</li>
+
                 </ul>
                 <div class="input-group-append ml-auto" id="search">
                     <input type="text" class="form-control" placeholder="Search">
@@ -121,7 +123,7 @@
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
 
-    @Scripts.Render("~/bundles/js/shared.js")
+    @Scripts.Render("~/Scripts/js/shared.js")
     @RenderSection("scripts", required: false)
 
 </body>
