--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Users/Login.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Users/Login.cshtml
@@ -29,9 +29,9 @@
         </div>
         <p class="text-center">
             Not a member?
-            @Html.ActionLink("Sign Up", "SignUp", "Users");
+            @Html.ActionLink("Sign Up", "SignUp", "Users")
         </p>
-        <button type="submit" class="btn btn-pink btn-block rounded-pill">Login</button>
+        <button value="Login" type="submit" class="btn btn-pink btn-block rounded-pill">Login</button>
 
     }
 </div>
