--- a/SaleLaptopSystem/SaleLaptopSystem/Content/css/shared.css
+++ b/SaleLaptopSystem/SaleLaptopSystem/Content/css/shared.css
@@ -1,5 +1,17 @@
 /* NAVIGATION */
 
+.showUser {
+    width: 50px;
+    height: 50px;
+    border: 2px solid purple;
+    border-radius: 50%;
+    margin-left: 20px;
+}
+.showUser:hover {
+    border: 2px solid green;
+    opacity: 0.9;
+}
+
 #nav {
     background-color: #F47983;
 }
