--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using SaleLaptopSystem.Models
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -31,10 +32,24 @@
                     <li class="nav-item">@Html.ActionLink("HP", "Index", "Products", new { brand = 4 }, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Login", "Login", "Users", null, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Sign Up", "SignUp", "Users", null, new { @class = "nav-link" })</li>
+                    @if (Session["User"] == null)
+                    {
+                        <li class="nav-item">@Html.ActionLink("Login", "Login", "Users", null, new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Sign Up", "SignUp", "Users", null, new { @class = "nav-link" })</li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <div class="dropdown show">
+                                <img class="showUser rounded-circle" onerror="this.src='https://png.pngtree.com/png-vector/20190710/ourmid/pngtree-user-vector-avatar-png-image_1541962.jpg';" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuLink" src="@((Session["User"] as User).Image)" alt="Alternate Text" />
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    @Html.ActionLink("Logout", "Logout", "Users", null, new { @class = "nav-link" })
+                                </div>
+                            </div>
+                        </li>
+                    }
 
-                </ul>
+</ul>
                 <div class="input-group-append ml-auto" id="search">
                     <input type="text" class="form-control" placeholder="Search">
                     <div class="input-group-append">
