--- a/SaleLaptopSystem/SaleLaptopSystem/Content/css/shared.css
+++ b/SaleLaptopSystem/SaleLaptopSystem/Content/css/shared.css
@@ -1,5 +1,4 @@
-/* NAVIGATION */
-
+/* SHOW USER */
 .showUser {
     width: 50px;
     height: 50px;
@@ -7,10 +6,32 @@
     border-radius: 50%;
     margin-left: 20px;
 }
+
 .showUser:hover {
     border: 2px solid green;
     opacity: 0.9;
 }
+
+/* SHOW CART */
+#cart {
+    width: 40px;
+    height: 40px;
+    margin: 0 10px;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+#cartNum {
+    display: inline-block;
+    width: 25px;
+    font-size: 10px;
+    margin-left: -15px;
+    background: #ffff;
+    padding: 4px;
+    border: 1px solid purple;
+    border-radius: 50%;
+}
+/* NAVIGATION */
 
 #nav {
     background-color: #F47983;
