up imgae view product and action

--- a/SaleLaptopSystem/SaleLaptopSystem/Views/ProductDetails/Details.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/ProductDetails/Details.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>ProductDetail</h4>
+
+<div style="background-color:lightpink">
+    <h1 class="text-center"><b><i>ProductDetail</i></b></h1>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Processor)
+            <h3><b>@Html.DisplayNameFor(model => model.Processor)</b> </h3>
         </dt>
 
         <dd>
@@ -19,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.RAM)
+            <h3><b>@Html.DisplayNameFor(model => model.RAM)</b> </h3>
         </dt>
 
         <dd>
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Screen)
+            <h3><b>@Html.DisplayNameFor(model => model.Screen)</b> </h3>
         </dt>
 
         <dd>
@@ -35,7 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Storage)
+            <h3><b>@Html.DisplayNameFor(model => model.Storage)</b> </h3>
         </dt>
 
         <dd>
@@ -43,7 +43,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Graphic)
+            <h3><b>@Html.DisplayNameFor(model => model.Graphic)</b> </h3>
         </dt>
 
         <dd>
@@ -51,7 +51,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Size)
+            <h3><b>@Html.DisplayNameFor(model => model.Size)</b> </h3>
         </dt>
 
         <dd>
@@ -59,7 +59,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.OS)
+            <h3><b>@Html.DisplayNameFor(model => model.OS)</b> </h3>
         </dt>
 
         <dd>
@@ -67,7 +67,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Video)
+            <h3><b>@Html.DisplayNameFor(model => model.Video)</b> </h3>
         </dt>
 
         <dd>
@@ -77,7 +77,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Connection)
+            <h3><b>@Html.DisplayNameFor(model => model.Connection)</b> </h3>
         </dt>
 
         <dd>
@@ -85,7 +85,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Keyboard)
+            <h3><b>@Html.DisplayNameFor(model => model.Keyboard)</b> </h3>
         </dt>
 
         <dd>
@@ -93,7 +93,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Battery)
+            <h3><b>@Html.DisplayNameFor(model => model.Battery)</b> </h3>
         </dt>
 
         <dd>
