--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Products/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Products/Index.cshtml
@@ -8,37 +8,49 @@
 <div class="row row-cols-1 row-cols-md-3">
     @foreach (var p in Model)
     {
-        <div class="col mb-4">
-            <!-- Card -->
-            <div class="card card-product">
-                <!--Card image-->
-                <div class="view overlay">
-                    <img class="card-img-top"
-                         src="https://cdn.tgdd.vn/Products/Images/44/215941/macbook-pro-16-201926-macbookprotouch16inch-1-600x600.jpg"
-                         alt="Card image cap">
-                    <a href="#!">
-                        <div class="mask rgba-white-slight"></div>
-                    </a>
-                </div>
-                <!--Card content-->
-                <div class="card-body">
-                    <h4 class="card-title">@Html.DisplayName(p.Name)</h4>
-                    <h5>
-                        <span class="red-text">$@Html.DisplayName(p.Discount.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Price.ToString())đ</span>
-                    </h5>
-                    <hr>
-                    <p class="card-text purple-text">
-                        @Html.DisplayName(p.Features)
-                    </p>
-                </div>
-                <div class="text-center">
+        foreach (var imange in p.Images)
+        {
+           if (p.ID == imange.ProductID)
+            {
+                <div class="col mb-4">
+                    <!-- Card -->
+                    <div class="card card-product">
+                        <!--Card image-->
+                        <div class="view overlay">
+                           
+                            
 
-                    <button type="button" class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
-                    <button type="button" class="btn btn-pink btn-md rounded-pill">Add Cart</button>
+                            <a href="/ProductDetails/Details/@p.ProductDetailID">
+                                <img class="card-img-top"
+                                     src="@imange.image"
+                                     alt="Card image cap">
+                                <div class="mask rgba-white-slight"></div>
+
+
+                            </a>
+                        </div>
+                        <!--Card content-->
+                        <div class="card-body">
+                            <h4 class="card-title">@Html.DisplayName(p.Name)</h4>
+                            <h5>
+                                <span class="red-text">$@Html.DisplayName(p.Discount.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Price.ToString())đ</span>
+                            </h5>
+                            <hr>
+                            <p class="card-text purple-text">
+                                @Html.DisplayName(p.Features)
+                            </p>
+                        </div>
+                        <div class="text-center">
+
+                            <button type="button" class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
+                            <button type="button" class="btn btn-pink btn-md rounded-pill">Add Cart</button>
+                        </div>
+                    </div>
+                    <!-- Card -->
                 </div>
-            </div>
-            <!-- Card -->
-        </div>
+            }
+
+        }
     }
 
 </div>
