--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Contact.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Contact.cshtml
@@ -3,7 +3,10 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-
+<div class="container">
+    <div class="text-center">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1964.534577121744!2d105.7315129181925!3d10.01114667418761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3916a227d0b95a64!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBGUFQgQ-G6p24gVGjGoQ!5e0!3m2!1svi!2s!4v1603722283736!5m2!1svi!2s" width="1000" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
