--- a/SaleLaptopSystem/SaleLaptopSystem/Views/ProductDetails/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/ProductDetails/Index.cshtml
@@ -9,85 +9,91 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Processor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RAM)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Screen)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Storage)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Graphic)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Size)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OS)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Video)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Connection)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Keyboard)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Battery)
-        </th>
-        <th></th>
-    </tr>
+<table class="table table-striped table-danger">
+    <thead class="black white-text">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Processor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RAM)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Screen)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Storage)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Graphic)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Size)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.OS)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Video)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Connection)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Keyboard)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Battery)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Processor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RAM)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Screen)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Storage)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Graphic)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Size)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OS)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Video)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Connection)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Keyboard)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Battery)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    </thead>
+    @foreach (var item in Model)
+    {
+       
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Processor)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RAM)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Screen)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Storage)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Graphic)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Size)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OS)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Video)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Connection)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Keyboard)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Battery)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                </td>
+            </tr>
+       
+
+    }
 
 </table>
