--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" id="nav">
-        @Html.ActionLink("Smart Lap", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        <div class="nav-link waves-effect waves-light">@Html.ActionLink("Smart Lap", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</div> 
         <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#menu">
             <span class="navbar-toggler-icon"></span>
         </button>
