--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Users/Login.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Users/Login.cshtml
@@ -5,6 +5,7 @@
 }
 
 @Styles.Render("~/Content/css/login.css")
+<h3 class="btn-danger btn-block rounded-pill text-center">@ViewBag.Error</h3>
 
 <div class="row sign-up">
     <div class="col-md-4">
