--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
@@ -39,16 +39,32 @@
                         <li class="nav-item">@Html.ActionLink("Login", "Login", "Users", null, new { @class = "nav-link" })</li>
                         <li class="nav-item">@Html.ActionLink("Sign Up", "SignUp", "Users", null, new { @class = "nav-link" })</li>
                         <li class="nav-item">
-                            <a href="/Orders/Checkout">
-                                <img id="cart" src="~/img/cart.png"><span id="cartNum">0</span>
+                            <a href="/Orders/">
+                                @{ 
+                                    int quantity = 0;
+                                    if (Session["cart"] != null)
+                                    {
+                                        List<CartItem> carts = (List<CartItem>)Session["cart"];
+                                        quantity = carts.Sum(item => item.Quantity);
+                                    }
+                                }
+                                <img id="cart" src="~/img/cart.png"><span id="cartNum">@quantity</span>
                             </a>
                         </li>
                     }
                     else
                     {
                         <li class="nav-item">
-                            <a href="/Users/Index">
-                                <img id="cart" src="~/img/cart.png"><span id="cartNum">10</span>
+                            <a href="/Orders/">
+                                @{
+                                    int quantity = 0;
+                                    if (Session["cart"] != null)
+                                    {
+                                        List<CartItem> carts = (List<CartItem>)Session["cart"];
+                                        quantity = carts.Sum(item => item.Quantity);
+                                    }
+                                }
+                                <img id="cart" src="~/img/cart.png"><span id="cartNum">@quantity</span>
                             </a>
                         </li>
                         <li class="nav-item">
