--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Products/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Products/Index.cshtml
@@ -32,7 +32,7 @@
                         <div class="card-body">
                             <h4 class="card-title">@Html.DisplayName(p.Name)</h4>
                             <h5>
-                                <span class="red-text">$@Html.DisplayName(p.Discount.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Price.ToString())đ</span>
+                                <span class="red-text">$@Html.DisplayName(p.Price.ToString())đ</span> <span class="discount">$@Html.DisplayName(p.Discount.ToString())đ</span>
                             </h5>
                             <hr>
                             <p class="card-text purple-text">
